loader_error.txt
   Compiling loader v0.1.0 (C:\aserveur\www\exephp\src-tauri\loader)
error[E0425]: cannot find function `show` in crate `msgbox`
  --> src\main.rs:19:25
   |
19 |         let _ = msgbox::show("ExeOutput Runtime Error", &msg, msgbox::IconType::Error);
   |                         ^^^^ not found in `msgbox`

warning: unused import: `std::path::PathBuf`
 --> src\main.rs:8:5
  |
8 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0425`.
warning: `loader` (bin "loader") generated 1 warning
error: could not compile `loader` (bin "loader") due to 1 previous error; 1 warning emitted
